force-app/main/default/objects/Account/fields/Colorfull__c.field-meta.xml
<CustomField>
    <fullName>Colorfull__c</fullName>
    <label>Colorfull</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>