force-app/main/default/objects/Account/fields/Leadid__c.field-meta.xml
<CustomField>
    <fullName>Leadid__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Leadid</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>