force-app/main/default/objects/Account/fields/No_of_Contacts_on_this_Account__c.field-meta.xml
<CustomField>
    <fullName>No_of_Contacts_on_this_Account__c</fullName>
    <label>No of Contacts on this Account</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>