force-app/main/default/objects/Account/fields/Update_Field__c.field-meta.xml
<CustomField>
    <fullName>Update_Field__c</fullName>
    <formula>IF(AnnualRevenue &lt; 100000 ,(&apos;&lt;html&gt;&lt;body&gt;&lt;div style=&quot;color: red;&quot;&gt;&lt;b&gt;&apos; &amp; TEXT(AnnualRevenue) &amp; &apos;&lt;/b&gt;&lt;/div&gt;&lt;/body&gt;&lt;/html&gt;&apos;),
IF(AnnualRevenue &gt; 100000 ,(&apos;&lt;html&gt;&lt;body&gt;&lt;div style=&quot;color: green;&quot;&gt;&lt;b&gt;&apos; &amp; TEXT(AnnualRevenue) &amp; &apos;&lt;/b&gt;&lt;/div&gt;&lt;/body&gt;&lt;/html&gt;&apos;),
&quot;&quot;
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Update Field</label>
    <type>Text</type>
</CustomField>