force-app/main/default/objects/Account/fields/xyz__c.field-meta.xml
<CustomField>
    <fullName>xyz__c</fullName>
    <label>xyz</label>
    <length>12</length>
    <type>Text</type>
</CustomField>